--- a/coba.html
+++ b/coba.html
@@ -1,5 +1,5 @@
 
-<title>VIDS</title>
+<title>A faint smile that makes me curious. What's going on? 😎😍</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
         body {
